fixed some css z-index problems but there is still a bug in firefox from shadowDom element

--- a/website/scss/_ui.scss
+++ b/website/scss/_ui.scss
@@ -4,7 +4,7 @@ dialog-zone {
     height: 100vh;
     top: 0;
     left: 0;
-    z-index: 9999;
+    z-index: 4;
     display: flex;
     align-items: center;
     justify-content: center;
