--- a/website/scss/stylesheet.scss
+++ b/website/scss/stylesheet.scss
@@ -12,6 +12,79 @@ main {
     width: 100vw;
 }
 
+space-canvas {
+    background-color: $color;
+}
+
+floating-labels {
+    font-size: $ui-fs;
+    z-index: 1;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    user-select: none;
+}
+
+
+#starsNames {
+    text-shadow: none;
+    color: #000074;
+}
+
+#options {
+    position: absolute;
+    z-index: 2;
+    top: $ui-margin;
+    right: $ui-margin;
+    font-size: $ui-fs;
+    width: 15rem;
+
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+
+    h3 {
+        margin-bottom: .5rem;
+        font-size: $ui-fs;
+        background-color: $light;
+        color: $color;
+        padding-left: 1rem;
+    }
+
+    fieldset {
+        border: $ui-border-size $light solid;
+        padding: 1rem;
+        background-color: $color;
+
+        &:not(:last-of-type) {
+            margin-bottom: 1rem;
+        }
+    }
+
+    legend {
+        display: inline-block;
+        height: 1rem;
+        margin-bottom: 0;
+        background-color: $color;
+
+        &:before, &:after {
+            content: ':';
+        }
+    }
+}
+
+object-info {
+    position: absolute;
+    z-index: 3;
+    top: $ui-margin;
+    left: $ui-margin;
+    font-size: $ui-fs;
+}
+
 button, .button {
     text-decoration: none;
     display: inline-block;
@@ -60,86 +133,12 @@ input {
     }
 }
 
-#options {
-    position: absolute;
-    top: $ui-margin;
-    right: $ui-margin;
-    font-size: $ui-fs;
-    width: 15rem;
-    z-index: 50;
-
-    user-select: none;
-    -moz-user-select: none;
-    -webkit-user-select: none;
-    -ms-user-select: none;
-
-    h3 {
-        margin-bottom: 1rem;
-        font-size: $ui-fs;
-        background-color: $light;
-        color: $color;
-        padding-left: 1rem;
-    }
-
-    fieldset {
-        border: $ui-border-size $light solid;
-        padding: 1rem;
-        background-color: $color;
-
-        &:not(:last-of-type) {
-            margin-bottom: 1rem;
-        }
-    }
-
-    legend {
-        display: inline-block;
-        position: relative;
-        bottom: -.3rem;
-        height: 1rem;
-        margin-top: -1rem;
-        margin-bottom: 0;
-        background-color: $color;
-
-        &:before, &:after {
-            content: ':';
-        }
-    }
-}
-
 list-select {
     --max-height: 10rem;
 }
 
-// list-box:not(:last-child),
-// list-select:not(:last-child),
-// list-checkbox:not(:last-child) {
-//     margin-bottom: .5rem;
-// }
 fieldset > *:not(:last-child) {
     margin-bottom: .75rem;
-}
-
-object-info {
-    position: absolute;
-    z-index: 100;
-    top: $ui-margin;
-    left: $ui-margin;
-    font-size: $ui-fs;
-}
-
-space-canvas {
-    background-color: $color;
-}
-
-floating-labels {
-    font-size: $ui-fs;
-    position: absolute;
-    z-index: 10;
-}
-
-#starsNames {
-    text-shadow: none;
-    color: #000074;
 }
 
 
